plugins {
    id 'com.robothy.github-repository-release-plugin' version '1.3'
    id 'jacoco'
    id "com.dorongold.task-tree" version "4.0.2"
}

repositories {
    mavenLocal()
    mavenCentral()
}

allprojects {
    pluginManager.withPlugin('java') {
        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(21)
            }
        }
    }
}

def modulesWithoutCoverage = ['local-s3-standalone']

/**
 * Aggregates the coverage that the `test` task of every module recorded.
 */
tasks.register('mergeReports', JacocoReport) {
    reports {
        xml.required.set(true)
        html.required.set(true)
        //csv.required.set(true)
    }
}

project.subprojects.each { module ->
    module.afterEvaluate {
        def testTask = module.tasks.named('test', Test)
        tasks.named('mergeReports', JacocoReport) {
            dependsOn(testTask)
            // The provider carries the dependency on the task that writes the file.
            executionData.from(testTask.map { it.extensions.getByType(JacocoTaskExtension).destinationFile })
            if (!modulesWithoutCoverage.contains(module.name)) {
                sourceDirectories.from(module.sourceSets.main.java.srcDirs)
                classDirectories.from(module.sourceSets.main.output.classesDirs)
            }
        }

        if (module.plugins.hasPlugin('local-s3.publish')) {
            rootProject.tasks.release.dependsOn(module.tasks['publishAllPublicationsToProjectLocalRepository'])
            rootProject.tasks.release.dependsOn(module.tasks['zipMavenCentralPortalPublication'])
            rootProject.tasks.release.dependsOn(module.tasks['uploadMavenCentralPortal'])
        }
    }
}